--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 5vmin;
   pointer-events: none;
 }
 
@@ -14,8 +14,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
+  padding-top: 2vmin;
   color: white;
 }
 
